# Foccuss.Desktop.Windows

./: .gitignore  BUILDME.md  CMakeLists.txt  README.md  build.bat  create_icons.bat  fix_and_build.bat  install_deps.bat  run.bat
cmake/: FindSQLite3.cmake
include/: Common.h  ForwardDeclarations.h  QtVersionCheck.h
resources/: resources.qrc
resources/styles/: main_style.qss
src/: main.cpp
src/core/: appdetector.cpp  appdetector.h  appmonitor.cpp  appmonitor.h
src/data/: appmodel.cpp  appmodel.h  blockTimeSettingsModel.cpp  blockTimeSettingsModel.h  database.cpp  database.h
src/service/: apiservice.cpp  apiservice.h  winservice.cpp  winservice.h
src/ui/: applistmodel.cpp  applistmodel.h  blockoverlay.cpp  blockoverlay.h  mainwindow.cpp  mainwindow.h
